   	handles CNAME -> A redirections.

   +	ideally "dns-gl < SPF fail < CONTENT", but currently the precedence
   	is actually "SPF fail < dns-gl = CONTENT".


   +	CONN like command for forward host connections.


--2.3.4--

  !!	Fixed potential seg.fault by adding missing message "trap" flag
	to the summary table to match MSG_TRAP.

   !	clamd, ctasd: skip scanning for discard or trap.

--2.3.3--

   !	CLIENT_IS_TRAP and MSG_TRAP should continue to set SMTPF_DISCARD
   	until cmdData hits the final dot in order to by-pass all the spam
   	tests.

   !	chunkBufferForward: don't count dot transparency application when
   	forwarding a chunk, otherwise the output loop could prematurely
   	terminate, losing output.

   !	Reassert that TRAP messages are excluded from "click" replies.

--2.3.2--

   !	Corrected definition of MSG_TRAP. The changes in 2.3.1 redefined
   	CLIENT_IS_TRAP, but neglected to update MSG_TRAP, which resulted
   	in MSG_SAVE incorrectly behaving like MSG_TRAP.

--2.3.1--

   !	smtpf.h, cmdData: Changed TRAP behaviour from SAVE/DISCARD to
   	SAVE/REJECT.

   !	smtpf.h, summary.c: The CLIENT_IS_IPV6 flag has been dropped,
	since it is not used; the ipv6 summary information still remains
	though as there is an equally good check and the information is
	handy.

   +	Added TRAP:"path" and SAVE:"path" support. Requested by Quentin
   	Campbell

   !	chunkBufferForward: LF sentinel detection was incorrect
	resulting in the sentinel LF being inserted into messsages
	greater than 64KB.

--2.3.0-- AKA 2.2.37

  !!	Many assorted changes related to updating the Windows port.

  !!	serverMain: moved serverSignalsInit ahead of serverInit and
  	server_init. The smtpf server_init spawns multicast / unicast
  	threads and the misplaced serverSignalsInit, meant that the
  	blocked signal set failed to be correctly applied.

   !	attachmentMail: Fixed broken Filename-From, MimeType-From, and
   	Archname-From tag lookups.
