@@ -1,7 +1,7 @@
 #!/bin/sh
 
 for f in *.c; do
-	if ! grep -E 'LOG_TRACE.*000,|syslog.*\(000\)|reply.*\(000\)' $f ; then
+	if ! grep -E 'LOG_TRACE.*000,|MSG\(000\)|NUM\(000\)' $f ; then
 		continue;
 	fi
 	if test ! -f $f.orig ; then
